--- a/src/app/components/customer-page/customer-page.component.html
+++ b/src/app/components/customer-page/customer-page.component.html
@@ -55,4 +55,10 @@
     </tbody>
   </table>
 
+  <br>
+  <mat-paginator [length]="100"
+                 [pageSize]="10"
+                 [pageSizeOptions]="[5, 10, 25, 100]">
+  </mat-paginator>
+
 </div>
