--- a/src/app/components/customer-page/customer-page.component.html
+++ b/src/app/components/customer-page/customer-page.component.html
@@ -4,22 +4,22 @@
 
   <div class="mb-3">
     <label for="name" class="form-label">Name</label>
-    <input type="text" class="form-control" id="name" placeholder="please enter your name here">
+    <input [(ngModel)]="customerName" type="text" class="form-control" id="name" placeholder="please enter your name here">
   </div>
 
   <div class="mb-3">
     <label for="address" class="form-label">Address</label>
-    <input type="text" class="form-control" id="address" placeholder="What's your home city?">
+    <input [(ngModel)]="customerAddress"  type="text" class="form-control" id="address" placeholder="What's your home city?">
   </div>
 
   <div class="mb-3">
     <label for="salary" class="form-label">Salary</label>
-    <input type="number" class="form-control" id="salary" placeholder="Salary here">
+    <input [(ngModel)]="customerSalary"  type="number" class="form-control" id="salary" placeholder="Salary here">
   </div>
 
   <!--display: flex (justify-content:flex-end, align-items:right)-->
   <p style="text-align: right">
-    <button class="btn btn-primary btn-sm">Save Customer</button>
+    <button class="btn btn-primary btn-sm" (click)="saveCustomer()">Save Customer</button>
   </p>
 
   <hr>
