--- a/src/app/components/customer-page/customer-page.component.html
+++ b/src/app/components/customer-page/customer-page.component.html
@@ -48,7 +48,7 @@
       <td>
         <p>
           <button class="btn btn-success btn-sm">Update</button>&nbsp;
-          <button class="btn btn-danger btn-sm">Delete</button>
+          <button class="btn btn-danger btn-sm" (click)="deleteCustomer(tempCustomer._id)">Delete</button>
         </p>
       </td>
     </tr>
