--- a/src/app/components/customer-page/customer-page.component.scss
+++ b/src/app/components/customer-page/customer-page.component.scss
@@ -10,3 +10,30 @@
   font-size: 20px;
   color: #d35400;
 }
+.cntl-bt{
+  margin-left: 5px;
+  width: 110px;
+  margin-top: 3px;
+}
+.btn{
+  margin-left: 5px;
+}
+.modal-title{
+  font-size: 30px;
+}
+.details-model-text{
+  font-size: 20px;
+
+}
+.detail-sp1{
+padding-right: 100px;
+}
+.detail-sp2{
+  padding-right: 45px;
+}
+.detail-sp3{
+  padding-right: 43px;
+}
+.detail-sp4{
+  padding-right: 17px;
+}
