--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,299 @@
-.header-Text{
-  color: #d35400;
-  font-family: 'Lato', sans-serif;
-  font-size: 22px;
-  margin-top: 50px;
+.navbar{
+  padding-top: 0;
+  margin-top: -20px;
+  margin-left: 0;
+  margin-right: 0;
+  border-radius: 30px;
 }
+@import url("//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
+
+.navbar-icon-top .navbar-nav .nav-link > .fa {
+  position: relative;
+  width: 36px;
+  font-size: 24px;
+}
+
+.navbar-icon-top .navbar-nav .nav-link > .fa > .badge {
+  font-size: 0.75rem;
+  position: absolute;
+  right: 0;
+  font-family: sans-serif;
+}
+
+.navbar-icon-top .navbar-nav .nav-link > .fa {
+  top: 3px;
+  line-height: 12px;
+}
+
+.navbar-icon-top .navbar-nav .nav-link > .fa > .badge {
+  top: -10px;
+}
+
+@media (min-width: 576px) {
+  .navbar-icon-top.navbar-expand-sm .navbar-nav .nav-link {
+    text-align: center;
+    display: table-cell;
+    height: 70px;
+    vertical-align: middle;
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+
+  .navbar-icon-top.navbar-expand-sm .navbar-nav .nav-link > .fa {
+    display: block;
+    width: 48px;
+    margin: 2px auto 4px auto;
+    top: 0;
+    line-height: 24px;
+  }
+
+  .navbar-icon-top.navbar-expand-sm .navbar-nav .nav-link > .fa > .badge {
+    top: -7px;
+  }
+}
+
+@media (min-width: 768px) {
+  .navbar-icon-top.navbar-expand-md .navbar-nav .nav-link {
+    text-align: center;
+    display: table-cell;
+    height: 70px;
+    vertical-align: middle;
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+
+  .navbar-icon-top.navbar-expand-md .navbar-nav .nav-link > .fa {
+    display: block;
+    width: 48px;
+    margin: 2px auto 4px auto;
+    top: 0;
+    line-height: 24px;
+  }
+
+  .navbar-icon-top.navbar-expand-md .navbar-nav .nav-link > .fa > .badge {
+    top: -7px;
+  }
+}
+
+@media (min-width: 992px) {
+  .navbar-icon-top.navbar-expand-lg .navbar-nav .nav-link {
+    text-align: center;
+    display: table-cell;
+    height: 70px;
+    vertical-align: middle;
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+
+  .navbar-icon-top.navbar-expand-lg .navbar-nav .nav-link > .fa {
+    display: block;
+    width: 48px;
+    margin: 2px auto 4px auto;
+    top: 0;
+    line-height: 24px;
+  }
+
+  .navbar-icon-top.navbar-expand-lg .navbar-nav .nav-link > .fa > .badge {
+    top: -7px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .navbar-icon-top.navbar-expand-xl .navbar-nav .nav-link {
+    text-align: center;
+    display: table-cell;
+    height: 70px;
+    vertical-align: middle;
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+
+  .navbar-icon-top.navbar-expand-xl .navbar-nav .nav-link > .fa {
+    display: block;
+    width: 48px;
+    margin: 2px auto 4px auto;
+    top: 0;
+    line-height: 24px;
+  }
+
+  .navbar-icon-top.navbar-expand-xl .navbar-nav .nav-link > .fa > .badge {
+    top: -7px;
+  }
+}
+/*
+//////////////////////////////////Footer/////////////////////////////////////////////////////
+body {
+
+  background: #C0CBC0;
+  text-align: center;
+
+}
+
+
+.site-footer {
+  position: relative;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color:#1A1F24;
+  padding-bottom: 0px;
+  overflow: hidden;
+
+}
+
+.site-footer .container {
+
+  max-width: 100%;
+  margin: 0 auto;
+  position: relative;
+  overflow: hidden;
+  padding-top: 20px;
+}
+
+.site-footer .container h1 {
+  font-size: 40px;
+}
+
+.site-footer .container h2 {
+  font-size: 40px;
+  float: right;
+}
+
+.site-footer .grid-container a {
+  color: #A2845C;
+  text-decoration: none;
+  font-size: 15px;
+  line-height: 16.25px;
+}
+
+.site-footer .grid-item {
+  padding: 0;
+  color: #A2845C;
+}
+
+
+.site-footer .grid-container .inner-grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  text-align: left;
+}
+
+.site-footer .container hr {
+  display: block;
+  height: 1px;
+  border: 0; border-top: 1px solid #A2845C;
+  margin: 1px;
+  padding: 0;
+}
+
+.site-footer .container p {
+  font-size: 14px;
+  text-align: right;
+  color: #A2845C;
+  font-weight: 500;
+}
+
+.site-footer .container .logo-img {
+  margin-top: 0;
+  padding-top: 0px;
+  width: 180px;
+  height: 180px;
+  cursor: pointer;
+}
+
+.site-footer .grid-container .grid-item .social-buttons {
+  padding-top: 20px;
+}
+
+.site-footer .grid-container .grid-item .social-buttons a {
+  display: inline-flex;
+  text-decoration: none;
+  font-size: 30px;
+  width: 60px;
+  height: 60px;
+  color: #0080ff;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  margin: 0 8px;
+}
+
+
+.site-footer .grid-container .grid-item .social-buttons a i{
+  transition: 0.3s ease-in;
+}
+
+.site-footer .grid-container .grid-item .social-buttons a:hover i {
+  background: linear-gradient(45deg, #f55000,#A2845C);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  transform: scale(1.5);
+}
+
+.circle-icon {
+  background: #a2845c;
+  padding:12px;
+  border-radius: 50%;
+}
+
+
+
+!*------------------------------------------------------------------
+[ Screen Sizes] *!
+
+
+!* Extra small devices (phones, 600px and down) *!
+@media only screen and (max-width: 600px) {
+
+  .site-footer {
+    height: 420px;
+    bottom: 0;
+  }
+
+  .site-footer .grid-container {
+    display: grid;
+    grid-template-columns: 400px;
+  }
+
+  .site-footer .grid-container .inner-grid-container {
+    display: grid;
+    grid-template-columns: auto auto ;
+    text-align: left;
+  }
+
+
+}
+
+!*========================================================*!
+
+!* Large devices (laptops/desktops, 992px and up) *!
+@media only screen and (min-width: 992px) {
+
+  .site-footer {
+    height: 240px;
+    bottom: 0;
+  }
+
+  .site-footer .grid-container {
+
+    display: grid;
+    grid-template-columns: 250px auto 250px;
+  }
+
+  .site-footer .grid-container .inner-grid-container{
+    display: grid;
+    padding-top: 50px;
+    grid-template-columns: auto auto auto auto;
+    text-align: left;
+  }
+
+}
+.logo-img{
+  height: 400px;
+  width: 400px;
+  margin-bottom: 100px;
+}
+
+
+
+*/
