--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -45,6 +45,12 @@
             Sellers
           </a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" routerLink="/History" routerLinkActive="active">
+            <i class="fa fa-history"></i>
+            History
+          </a>
+        </li>
 
       </ul>
       <ul class="navbar-nav ">
@@ -63,6 +69,7 @@
           </a>
         </li>
       </ul>
+
     </div>
 </nav>
 
