--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,9 +4,10 @@
 *{
   margin: 10px;
 }
-
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.cdk-global-overlay-wrapper, .cdk-overlay-container { z-index: 9999!important; }
+
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
